--- a/css/style9.css
+++ b/css/style9.css
@@ -3,8 +3,8 @@
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	top: 0;
-	left: 0;
+	/*top: 0;*/
+	/*left: 0;*/
 	background: transparent;
 	visibility: hidden;
 }
@@ -158,6 +158,7 @@
 	.overlay nav {
 		-webkit-transform: translateY(0);
 		transform: translateY(0);
+		top: 0;
 	}
 	.overlay svg {
 		display: none;
